--- a/ArgentinaPrograma/PracticasModulo3/src/index.html
+++ b/ArgentinaPrograma/PracticasModulo3/src/index.html
@@ -8,9 +8,11 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-   
-      
-    
+    <img class="logo" src="https://rocketprojectarg.netlify.app/static/media/guille.dc4d06dc.jfif" width="40px"/>
+    <nav class="nav-main">
+      <a class="a-nav" href="https://github.com/GuillermoMartos" target="_blank">VISIT ME!</a>
+      <a class="a-nav" href="https://www.linkedin.com/in/guillermo-luis-martos-7a01b6156/" target="_blank">LinkedIn</a>
+    </nav>
     <app-root></app-root>
   </body>
 </html>
